# mushin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  mushin_seed.json  mushin_seed_rank3.json  mushin_seed_rank5.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  draft-pdf.yml  paper-pdf.yml  publish.yml
changes/: +audit-fixes.fixed.md  +auto-tuning.added.md  +changelog-automation.added.md  +ci-batteries-clean-install.misc.md  +ci-hardening.misc.md  +claude-review.misc.md  +cleanup-docs.misc.md  +cleanup-hygiene.misc.md  +cleanup-robustness.fixed.md  +cleanup-tests.misc.md  +correction-options.added.md  +detection-battery.added.md  +docs-0.6.0-sweep-readme.misc.md  +docs-announce-0.4.0.misc.md  +docs-batch.misc.md  +docs-batteries-outputs.misc.md  +docs-batteries.misc.md  +docs-changelog-page.misc.md  +docs-cluster-validation-runbook.misc.md  +docs-example-fixes.fixed.md  +docs-example-notebooks.misc.md  +docs-examples-index.misc.md  +docs-examples-overhaul.added.md  +docs-frameworks-note.misc.md  +docs-parallel-sweep-example.misc.md  +docs-readme-0.5.0.misc.md  +docs-readme-refresh.misc.md  +docs-site.added.md  +docs-tuning-reference.misc.md  +docs-two-axes-parallelism.misc.md  +drop-py39.removed.md  +eval-extra.changed.md  +eval-stats-fixes.fixed.md  +example-sklearn-sweep.added.md  +feat-functional-sweep-api.added.md  +feat-picklable-dispatch.added.md  +feat-resume-hardening.added.md  +fix-bare-list-multirun-hint.fixed.md  +fix-hydra-chdir-warning.fixed.md  +gpu-packing.added.md  (+81 more)
docs/: concepts.md  contributing.md  examples.md  index.md  install.md  mcp.md  quickstart.md  tutorial.md
docs/guides/: auto-tuning.md  batteries.md  compare.md  custom.md  exploration-to-paper.md  llm.md  mcp.md  multinode.md  packing.md  resilience.md  segmentation.md  sharding.md  statistics.md  study.md  workflows.md
docs/notebooks/: 01_sweep_to_dataset.ipynb  02_compare_and_batteries.ipynb  03_study.ipynb  04_resilience.ipynb  05_llm_eval.ipynb  06_sklearn_framework_agnostic.ipynb  07_analyzing_results.ipynb
docs/reference/: analysis.md  benchmark.md  lightning.md  llm.md  study.md  tuning.md  utils.md  workflows.md
docs/superpowers/: cluster-validation-runbook.md
docs/superpowers/plans/: 2026-06-22-benchmark-compare.md  2026-06-22-flagship-example-and-quickstart.md  2026-06-22-study.md  2026-06-23-changelog-automation.md  2026-06-23-docs-site.md  2026-06-23-dogfood-regression-tests.md  2026-06-23-mcp-server.md  2026-06-23-segmentation.md  2026-06-24-docs-examples-overhaul.md  2026-06-24-llm-eval.md  2026-06-26-detection-battery.md  2026-06-27-multinode-ddp.md  2026-06-27-public-task-api.md  2026-06-28-task-batteries-spec2.md  2026-06-30-sharding-fsdp.md  2026-07-01-auto-tuning.md  2026-07-01-gpu-packing.md  2026-07-01-hydra-fsdp.md  2026-07-13-refocus-core.md  2026-07-13-strip-auto-tuning.md  2026-07-14-example-notebooks.md  2026-07-14-resume-hardening.md  2026-07-14-sweep-resilience-and-provenance.md  2026-07-15-functional-sweep-api.md  2026-07-15-picklable-dispatch.md
docs/superpowers/specs/: 2026-06-22-benchmark-compare-design.md  2026-06-22-mushin-positioning-design.md  2026-06-22-study-design.md  2026-06-23-changelog-automation-design.md  2026-06-23-docs-site-design.md  2026-06-23-dogfood-regression-tests-design.md  2026-06-23-mcp-server-design.md  2026-06-23-segmentation-design.md  2026-06-24-docs-examples-overhaul-design.md  2026-06-24-llm-eval-design.md  2026-06-26-detection-battery-design.md  2026-06-27-multinode-ddp-design.md  2026-06-27-public-task-api-design.md  2026-06-28-task-batteries-spec2-design.md  2026-06-30-sharding-fsdp-design.md  2026-07-01-auto-tuning-design.md  2026-07-01-gpu-packing-design.md  2026-07-01-hydra-fsdp-design.md  2026-07-13-refocus-core-design.md  2026-07-14-example-notebooks-design.md  2026-07-14-resume-hardening-design.md  2026-07-14-sweep-resilience-and-provenance-design.md  2026-07-15-functional-sweep-api-design.md  2026-07-15-picklable-dispatch-design.md
examples/: batteries.py  compare_classifiers.py  compare_llms_demo.py  gpu_packing.py  multinode_ddp.py  parallel_sweep.py  segmentation_demo.py  sharding_fsdp_demo.py  sharding_fsdp_multirun.py  sklearn_sweep.py  study_mnist.py  sweep_to_dataset.py
paper/: README.md  mushin.tex  paper.bib  paper.md
src/mushin/: __init__.py  _compatibility.py  _packing.py  _provenance.py  _resume.py  _show.py  _sweep_decorator.py  _sweep_io.py  _tuning.py  _utils.py  _validate.py  export.py  workflows.py
src/mushin/benchmark/: __init__.py  (+8 more)
tests/: conftest.py  test_batteries_examples.py  test_best.py  test_cache_dir.py  test_cell_count_gate.py  test_cluster.py  test_diff.py  test_dry_run.py  test_examples.py  test_export.py  test_launcher_config.py  test_lazy_imports.py  test_lightning_callbacks.py  test_lightning_hydra_ddp.py  test_lightning_hydra_fsdp.py  test_lightning_launchers.py  test_lightning_sharding.py  test_max_total_seconds.py  test_metric_coercion.py  test_notes_tags.py  test_override_grid.py  test_override_validation.py  test_packing.py  test_provenance.py  test_resume.py  test_review_fixes.py  test_robustness_cleanup.py  test_sample.py  test_show.py  test_sweep_decorator.py  test_sweep_io.py  test_sweep_resilience_integration.py  test_tuning.py  test_tuning_integration.py  test_utils.py  test_validate_on_run.py  test_workflows.py
tests/test_benchmark/: test_aggregate.py  test_audio.py  test_compare.py  test_detection.py  test_image_quality.py  test_import.py  test_incomplete.py  test_inference.py  test_metrics.py  test_predict.py  test_result.py  test_stats.py  test_tasks.py
tests/test_llm/: test_cache.py  test_compare.py  test_import.py  test_judge.py  test_system.py
tests/test_mcp/: test_server.py
tests/test_study/: conftest.py  test_load.py  test_study.py  test_sweep.py
(+18 files in other folders)
