[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI is "mushin-py" (the "mushin" name was taken);
# the import package is still `import mushin` (see src/mushin/).
name = "mushin-py"
version = "0.2.1"
description = "Boilerplate-free, reproducible ML experiment workflows built on PyTorch Lightning and hydra-zen. Carved out of MIT-LL's responsible-ai-toolbox."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Josue Martinez-Martinez" },
]
maintainers = [
    { name = "Josue Martinez-Martinez" },
]
keywords = ["machine learning", "reproducibility", "pytorch-lightning", "hydra", "hydra-zen"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytorch-lightning >= 1.5.0",
    "hydra-zen >= 0.9.0",
    "hydra-core >= 1.2.0",
    # torch dropped Intel-macOS (x86_64) wheels after 2.2.x, so cap there on that
    # platform only; everywhere else take any modern torch.
    "torch >= 1.13.0,<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch >= 1.13.0 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # torch 2.2.x (the Intel-macOS cap above) is built against NumPy 1.x; that
    # platform is inherently Python <=3.11. Everywhere else take NumPy 2.x.
    "numpy >= 1.24,<2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy >= 2 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "omegaconf >= 2.1.1",
    "xarray >= 0.19.0",
    "typing-extensions >= 4.1.0",
    "torchmetrics >= 1.0",
    "scipy >= 1.10",
    "pandas >= 1.5",
]

[project.optional-dependencies]
viz = ["matplotlib >= 3.3"]
netcdf = ["netCDF4 >= 1.5.8"]
# The MCP SDK requires Python >= 3.10; mushin still supports 3.9, so gate it.
mcp = ["mcp >= 1.2 ; python_version >= '3.10'"]

[project.scripts]
mushin-mcp = "mushin.mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/martinez-hub/mushin"
Repository = "https://github.com/martinez-hub/mushin"
Issues = "https://github.com/martinez-hub/mushin/issues"
Changelog = "https://github.com/martinez-hub/mushin/blob/main/CHANGELOG.md"
# Attribution to the project mushin was carved out of (also in LICENSE/README).
"Upstream (origin)" = "https://github.com/mit-ll-responsible-ai/responsible-ai-toolbox"

# Dev tooling, installed by `uv sync` (PEP 735 dependency group).
[dependency-groups]
dev = [
    "ruff >= 0.6",
    "codespell >= 2.3",
    "pre-commit >= 3.5",
    "pytest >= 7.0.0",
    "hypothesis >= 6.28.0",
    "pytest-xdist",
    "towncrier >= 23.11",
    "matplotlib >= 3.3",
    "netCDF4 >= 1.5.8",
    "mcp >= 1.2 ; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples"]
filterwarnings = [
    # mushin deliberately relies on Hydra's chdir-into-job-dir behavior to read
    # results back; this deprecation is about that behavior changing upstream.
    "ignore:Future Hydra versions will no longer change working directory:UserWarning",
    # matplotlib internals call deprecated pyparsing APIs; not fixable from here.
    "ignore:.* deprecated - use .*",
]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # bugbear is noisy for test fixtures/assertions

[tool.codespell]
skip = "*.lock,*.ckpt,*.pt,.git,.venv,*.egg-info"
# "mushin" (無心) and a few ML terms trip the default dictionary.
ignore-words-list = "mushin,nin,tha"

[tool.towncrier]
# News fragments live in changes/<id>.<type>.md and are assembled into
# CHANGELOG.md at release time by `make changelog VERSION=X.Y.Z`.
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]            # Markdown headings, not RST underlines
title_format = "## [{version}] - {project_date}"
issue_format = "#{issue}"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
