[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI is "mushin-py" (the "mushin" name was taken);
# the import package is still `import mushin` (see src/mushin/).
name = "mushin-py"
version = "0.3.0"
description = "Boilerplate-free, reproducible ML experiment workflows built on PyTorch Lightning and hydra-zen. Carved out of MIT-LL's responsible-ai-toolbox."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Josue Martinez-Martinez" },
]
maintainers = [
    { name = "Josue Martinez-Martinez" },
]
keywords = ["machine learning", "reproducibility", "pytorch-lightning", "hydra", "hydra-zen"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Lightning floor is 2.4: the pre-2.0 API (1.5) doesn't run this package, and
    # we pin the floor to pair with the torch >= 2.4 floor below (Lightning 2.4 is
    # contemporaneous with torch 2.4). Verified by the min-version CI job.
    "pytorch-lightning >= 2.4.0",
    # hydra-zen floor is 0.10: `mushin.study` imports `hydra_zen.multirun`, which
    # 0.9 doesn't export. Verified by the min-version CI job.
    "hydra-zen >= 0.10.0",
    "hydra-core >= 1.2.0",
    # torch floors are split by platform. Non-Intel uses NumPy 2 (below), which
    # is ABI-incompatible with torch built against NumPy 1.x; PyTorch first ships
    # NumPy-2-compatible wheels in 2.4.0 ("Numpy is not available" below that).
    # Intel-macOS has no torch wheels past 2.2.x and uses NumPy 1.x, so it is
    # pinned to exactly 2.2.x. Both verified by the min-version CI job.
    "torch >= 2.2.0,<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch >= 2.4.0 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # Intel-macOS (torch 2.2.x) is built against NumPy 1.x and is inherently
    # Python <=3.11. Everywhere else take NumPy 2.x.
    "numpy >= 1.24,<2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy >= 2 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "omegaconf >= 2.1.1",
    # xarray 2024.6.0 is the first NumPy-2-compatible release (older xarray uses
    # `np.unicode_`, removed in NumPy 2); it still supports Python 3.9. Verified
    # by the min-version CI job.
    "xarray >= 2024.6.0",
    "typing-extensions >= 4.1.0",
    "torchmetrics >= 1.0",
    "scipy >= 1.10",
    # pandas 2.2.2 is the first release officially compatible with NumPy 2 (the
    # non-Intel floor); older pandas imports under NumPy 2 only by luck (ABI
    # "size changed" warning). Verified by the min-version CI job.
    "pandas >= 2.2.2",
]

[project.optional-dependencies]
viz = ["matplotlib >= 3.3"]
netcdf = ["netCDF4 >= 1.7.0"]
# The MCP SDK requires Python >= 3.10; mushin still supports 3.9, so gate it.
mcp = ["mcp >= 1.2 ; python_version >= '3.10'"]

[project.scripts]
mushin-mcp = "mushin.mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/martinez-hub/mushin"
Repository = "https://github.com/martinez-hub/mushin"
Issues = "https://github.com/martinez-hub/mushin/issues"
Changelog = "https://github.com/martinez-hub/mushin/blob/main/CHANGELOG.md"
# Attribution to the project mushin was carved out of (also in LICENSE/README).
"Upstream (origin)" = "https://github.com/mit-ll-responsible-ai/responsible-ai-toolbox"

# Dev tooling, installed by `uv sync` (PEP 735 dependency group).
[dependency-groups]
docs = [
    "mkdocs-material >= 9.5, < 10",
    "mkdocstrings[python] >= 0.26, < 1",
]
dev = [
    "ruff >= 0.6",
    "codespell >= 2.3",
    "pre-commit >= 3.5",
    "pytest >= 7.0.0",
    "hypothesis >= 6.28.0",
    "pytest-xdist >= 3.0",
    "towncrier >= 23.11",
    "matplotlib >= 3.3",
    "netCDF4 >= 1.7.0",
    "mcp >= 1.2 ; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples"]
filterwarnings = [
    # mushin deliberately relies on Hydra's chdir-into-job-dir behavior to read
    # results back; this deprecation is about that behavior changing upstream.
    "ignore:Future Hydra versions will no longer change working directory:UserWarning",
    # matplotlib internals call deprecated pyparsing APIs; not fixable from here.
    "ignore:.* deprecated - use .*",
]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # bugbear is noisy for test fixtures/assertions

[tool.codespell]
skip = "*.lock,*.ckpt,*.pt,.git,.venv,*.egg-info"
# "mushin" (無心) and a few ML terms trip the default dictionary.
ignore-words-list = "mushin,nin,tha"

[tool.towncrier]
# News fragments live in changes/<id>.<type>.md and are assembled into
# CHANGELOG.md at release time by `make changelog VERSION=X.Y.Z`.
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]            # Markdown headings, not RST underlines
title_format = "## [{version}] - {project_date}"
issue_format = "#{issue}"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
